Update index.html "University of Greenwich"

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
             <h1>{{ .Site.Title }}</h1>
 
             {{- with .Site.Params.homeSubtitle }}
-                <p id="home-subtitle">{{.}}</p>
+                <p>University of Greenwich</p>
             {{- end }}
 
             {{- with .Site.Params.social }}
